--- a/SPP_vs_Force.ipynb
+++ b/SPP_vs_Force.ipynb
@@ -16,20 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0e1fce18",
    "metadata": {},
    "outputs": [],
    "source": [
     "c_const = 299792458\n",
     "eps0_const = 1/(4*np.pi*c_const**2)*1e7\n",
-    "mu0_const = 4*np.pi * 1e-7\n",
-    "\n"
+    "mu0_const = 4*np.pi * 1e-7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 4,
    "id": "f2ab44a2",
    "metadata": {},
    "outputs": [],
@@ -39,11 +38,11 @@
     "\n",
     "R = 295/2\n",
     "#148\n",
-    "dist = 50\n",
+    "dist = 2\n",
     "#d=60\n",
     "a_angle = np.pi/4\n",
     "angle = 25*np.pi/180\n",
-    "point = [0,0,dist]\n",
+    "point = [0,0,dist+R]\n",
     "z0 = point[2]\n",
     "wls=np.linspace(600,1200,100)\n",
     "phase = -np.pi/2\n",
@@ -56,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 5,
    "id": "6416cb18",
    "metadata": {},
    "outputs": [
@@ -64,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [03:42<00:00,  2.23s/it]\n"
+      "100%|██████████| 100/100 [04:14<00:00,  2.55s/it]\n"
      ]
     }
    ],
@@ -158,10 +157,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "id": "be8643cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'wls' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m PHI \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39mnp\u001b[38;5;241m.\u001b[39mpi, \u001b[38;5;241m100\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m directivity \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mempty((\u001b[38;5;28mlen\u001b[39m(PHI), \u001b[38;5;28mlen\u001b[39m(\u001b[43mwls\u001b[49m)))\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m wl_idx, wl \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(wls):\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m angle_idx \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(PHI)):\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'wls' is not defined"
+     ]
+    }
+   ],
    "source": [
     "PHI = np.linspace(0, 2*np.pi, 100)\n",
     "\n",
