--- a/SPP_vs_Force.ipynb
+++ b/SPP_vs_Force.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0e1fce18",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f2ab44a2",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6416cb18",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [04:14<00:00,  2.55s/it]\n"
+      "  1%|          | 1/100 [00:00<01:26,  1.15it/s]/Users/semyon_b/git/SPP_ANALYTICAL/.venv/lib/python3.9/site-packages/scipy/integrate/_quadpack_py.py:449: IntegrationWarning: The integral is probably divergent, or slowly convergent.\n",
+      "  im_retval = quad(imfunc, a, b, args, full_output, epsabs,\n",
+      " 37%|███▋      | 37/100 [00:33<00:58,  1.08it/s]/Users/semyon_b/git/SPP_ANALYTICAL/.venv/lib/python3.9/site-packages/scipy/integrate/_quadpack_py.py:446: IntegrationWarning: The integral is probably divergent, or slowly convergent.\n",
+      "  re_retval = quad(refunc, a, b, args, full_output, epsabs,\n",
+      "100%|██████████| 100/100 [01:31<00:00,  1.09it/s]\n"
      ]
     }
    ],
